--- a/X86-64/Makefile
+++ b/X86-64/Makefile
@@ -1,2 +1,4 @@
 default:
 	nasm -f bin src\bootloader\boot.asm -o boot.bin
+	nasm -f bin src\bootloader\boot2.asm -o boot2.bin
+	nasm -f bin src\bootloader\boot3.asm -o boot3.bin
