Update ITS RUNNING!!!!

--- a/X86-64/Makefile
+++ b/X86-64/Makefile
@@ -1,4 +1,13 @@
-default:
-	nasm -f bin src\bootloader\boot.asm -o boot.bin
-	nasm -f bin src\bootloader\boot2.asm -o boot2.bin
-	nasm -f bin src\bootloader\boot3.asm -o boot3.bin
+x86_64_asm_source_files := $(shell find src -name *.asm)
+x86_64_asm_object_files := $(patsubst src/%.asm, bin/obj/%.o, $(x86_64_asm_source_files))
+
+$(x86_64_asm_object_files): bin/obj/%.o : src/%.asm
+	mkdir -p $(dir $@) && \
+	nasm -f elf64 $(patsubst bin/obj/%.o, src/%.asm, $@) -o $@
+
+.PHONY: build
+build: $(x86_64_asm_object_files)
+	mkdir -p bin/obj && \
+	x86_64-elf-ld -n -o bin/obj/kernel.bin -T src/targets/linker.ld $(x86_64_asm_object_files) && \
+	cp bin/obj/kernel.bin iso/boot/kernel.bin && \
+	grub-mkrescue /usr/lib/grub/i386-pc -o bin/kernel.iso iso
